<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Terminal de Cobro Móvil</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_message">Control de acceso</string>
    <string name="home_footer">2013 - Pumbanet &#169;</string>
    <string name="home_login_button_text">Login</string>
    <string name="home_login_user_text">Usuario</string>
    <string name="home_login_pass_text">Contraseña</string>
    <string name="home_login_logo_description">Logo</string>
    <string name="pay_reference_text">Referencia</string>
    <string name="pay_concept_text">Concepto</string>
    <string name="pay_amount_text">Importe</string>
    <string name="pay_category_text">Categoría</string>
    <string name="pay_button_text">Pagar</string>
    <string name="title_activity_tcm_pay">TCMP 2013 - Pumbanet &#169;</string>
    <string name="emv_swipe_check">Chip</string>
    <string name="title_activity_tcm_show_results">Resultado</string>

</resources>