<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#dddd66"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TcmLogin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/home_footer" />

    <TextView
        android:id="@+id/login.TextFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_message"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login.Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login.Username"
        android:layout_below="@+id/login.Username"
        android:text="@string/home_login_pass_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login.Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/login.Username"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login.BtnLogin"
        android:layout_alignRight="@+id/login.BtnLogin"
        android:layout_below="@+id/login.BtnLogin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login.TextFooter"
        android:layout_below="@+id/imageView1"
        android:text="@string/home_login_user_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/login.BtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login.Password"
        android:layout_alignRight="@+id/login.Password"
        android:layout_below="@+id/login.Password"
        android:text="@string/home_login_button_text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login.TextFooter"
        android:layout_alignTop="@+id/login.TextFooter"
        android:contentDescription="@string/home_login_logo_description"
        android:src="@drawable/pay_logo" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:indeterminate="true" />

</RelativeLayout>