<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddd66"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TcmPay" >

    <EditText
        android:id="@+id/editPayConcept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPayReference"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPayAmount"
        android:layout_below="@+id/editPayConcept"
        android:text="@string/pay_amount_text" />

    <EditText
        android:id="@+id/editPayAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPayConcept"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPayReference"
        android:layout_below="@+id/editPayReference"
        android:text="@string/pay_concept_text" />

    <Spinner
        android:id="@+id/payCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPayAmount"
        android:layout_alignRight="@+id/editPayAmount"
        android:layout_below="@+id/editPayAmount" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/payCategory"
        android:layout_below="@+id/payCategory"
        android:text="@string/pay_button_text" />

    <TextView
        android:id="@+id/textPayResult"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/payCategory"
        android:layout_alignRight="@+id/btnPay"
        android:layout_below="@+id/btnPay"
        android:text="@string/title_activity_tcm_pay"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editPayReference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textCapCharacters" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkEMV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textPayResult"
        android:layout_alignLeft="@+id/textPayResult"
        android:checked="true"
        android:text="@string/emv_swipe_check" />

    <Button
        android:id="@+id/printTest"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textPayResult"
        android:layout_alignTop="@+id/textPayResult"
        android:layout_marginTop="32dp"
        android:text="Print Test" />

</RelativeLayout>